--- a/resources/burl.props
+++ b/resources/burl.props
@@ -2,8 +2,15 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <entry key="updateMode">replace</entry>
+<entry key="doCounts">false</entry>
 <entry key="database">burlcontrol</entry>
 </properties>
+
+
+
+
+
+
 
 
 
