--- a/burlui/pubspec.yaml
+++ b/burlui/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   crypto: ^3.0.6
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  file_picker: ^9.0.2
 
 dev_dependencies:
   flutter_test:
