Set the proper property for keystore password.
																	 !

--- a/nonsecret/burl.props
+++ b/nonsecret/burl.props
@@ -12,4 +12,5 @@
 <entry key="email.user">EMAIL FROM USER</entry>
 <entry key="email.password">EMAIL PASSWORD -- actually GOOGLE passphrase</entry>
 <entry key="email.replyto">YOUR EMAIL</entry>
+<entry key="keystorePassword">KEYSTORE PASSWORD for catre.jks</entry>
 </properties>
