Update to use database pool and database-based work queue.

--- a/resources/burlcli.props
+++ b/resources/burlcli.props
@@ -3,7 +3,5 @@
 <properties>
 <entry key="updateMode">replace</entry>
 <entry key="shortDisplay">Title,LCC,Subjects</entry>
+<entry key="hostpfx">https://sherpa.cs.brown.edu</entry>
 </properties>
-
-
-
