--- a/burlui/pubspec.yaml
+++ b/burlui/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.5.2
   file_picker: ^9.0.2
+  go_router: ^15.1.1
+  string_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
